@@ -44,3 +44,4 @@
 /src/_ReSharper.cloudb
 /src/cloudb/TestResult.xml
 /bin
+/dist
