@@ -1,4 +1,7 @@
 ﻿using System;
+using System.Collections.Generic;
+
+using Deveel.Data.Configuration;
 
 using NUnit.Framework;
 
@@ -9,6 +12,22 @@ namespace Deveel.Data.Net.Security {
 			: base(storeType) {
 		}
 
-		protected abstract IAuthenticator CreateAuthenticator();
+		protected abstract Type AuthenticatorType { get; }
+
+		protected override void Config(ConfigSource config) {
+			config.SetValue("auth.type", AuthenticatorType.AssemblyQualifiedName);
+			OnAuthenticatorConfig(config);
+		}
+
+		protected virtual void OnAuthenticatorConfig(ConfigSource config) {
+		}
+
+		protected abstract void PopulateAuthenticationData(IDictionary<string, AuthObject> authData);
+
+		[Test]
+		public void Authenticate() {
+			IDictionary<string, AuthObject> authData = new Dictionary<string, AuthObject>();
+			PopulateAuthenticationData(authData);
+		}
 	}
 }
