@@ -1,8 +1,0 @@
-﻿using System;
-
-namespace Deveel.Data.Net.Security {
-	public enum AuthenticationPoint {
-		Client = 1,
-		Service = 2
-	}
-}
