@@ -70,6 +70,7 @@
     <Compile Include="Deveel.Data.Net.Client\PathValue.cs" />
     <Compile Include="Deveel.Data.Net.Client\PathValueType.cs" />
     <Compile Include="Deveel.Data.Net.Client\PathValue_Conversion.cs" />
+    <Compile Include="Deveel.Data.Net.Security\AuthenticationCode.cs" />
     <Compile Include="Deveel.Data.Net.Security\AuthObject.cs" />
     <Compile Include="Deveel.Data.Net.Security\AuthDataType.cs" />
     <Compile Include="Deveel.Data.Net.Security\AuthenticationPoint.cs" />
